<?xml version="1.0"?>
<package>
  <name>lwr_force_position_controllers</name>
  <version>0.0.0</version>
  <description>The lwr_force_position_controllers package</description>

  <maintainer email="manuelb@todo.todo">manuelb</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>lwr_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdljacdot</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>lwr_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdljacdot</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>kdl_conversions</run_depend>


  <export>
    <controller_interface plugin="${prefix}/lwr_force_position_controllers_plugins.xml"/>
  </export>
</package>
